--- a/src/components/modal/modal/(default)/login-modal/LoginModal.css
+++ b/src/components/modal/modal/(default)/login-modal/LoginModal.css
@@ -16,8 +16,8 @@
   z-index: -10;
 }
 .login-form.active {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   opacity: 1;
   z-index: 999;
 }
